Changed my blog's structure & uploaded sprint 3 Technical page

--- a/sprint1-cultural.html
+++ b/sprint1-cultural.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="col-4">
-          <a href="blog/index.html"><button class="btn btn-outline-success" type="submit">Back to Blog</button></a>
+          <a href="index.html"><button class="btn btn-outline-success" type="submit">Back to Blog</button></a>
            <!-- <a class="link-secondary" href="blog/index.html">Back to Home</a>       -->
         </div>
         <article class="blog-post">
