--- a/sprint2-cultural.html
+++ b/sprint2-cultural.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="col-4">
-            <a href="blog/index.html"><button class="btn btn-outline-success" type="submit">Back to Blog</button></a>
+            <a href="index.html"><button class="btn btn-outline-success" type="submit">Back to Blog</button></a>
         </div>
 
         <article class="blog-post">
