finished sprint 4 cultural blog post

--- a/index.html
+++ b/index.html
@@ -75,8 +75,13 @@
           <a class="btn btn-outline-success" href="sprint3-technical.html">Sprint 3 Technical</a>           
         </div>  
       </div>    
-      <!--<a class="p-2 link-secondary" href="../sprint3-cultural.html">Sprint 3</a>-->
-      <a class="btn btn-outline-success" href="#">Sprint 4</a>
+      <div class="dropdown">
+        <button class="dropbtn btn btn-outline-success">Sprint 4</button>
+        <div class="dropdown-content">
+          <a class="btn btn-outline-success" href="sprint4-cultural.html">Sprint 4 Cultural</a>
+          <a class="btn btn-outline-success" href="sprint4-technical.html">Sprint 4 Technical</a>           
+        </div>  
+      </div>   
       <a class="btn btn-outline-success" href="#">Sprint 5</a>
     </nav>
   </div>
@@ -259,7 +264,7 @@
         <h4 class="font-italic">Elsewhere</h4>
         <ol class="list-unstyled">
           <li><a href="https://github.com/sina-kakhki">GitHub</a></li>
-          <li><a href="#">Twitter</a></li>
+          <li><a href="https://twitter.com/Sina180/with_replies">Twitter</a></li>
           <li><a href="https://www.facebook.com/sina.kakhki/">Facebook</a></li>
         </ol>
       </div>
