finished sprint 4 technical blog and midified sprint 1 technica and added a <hr> tag on the bottom of my blog post pages

--- a/index.html
+++ b/index.html
@@ -81,8 +81,14 @@
           <a class="btn btn-outline-success" href="sprint4-cultural.html">Sprint 4 Cultural</a>
           <a class="btn btn-outline-success" href="sprint4-technical.html">Sprint 4 Technical</a>           
         </div>  
-      </div>   
-      <a class="btn btn-outline-success" href="#">Sprint 5</a>
+      </div>  
+      <div class="dropdown">
+        <button class="dropbtn btn btn-outline-success">Sprint 5</button>
+        <div class="dropdown-content">
+          <a class="btn btn-outline-success" href="sprint5-cultural.html">Sprint 5 Cultural</a>
+          <a class="btn btn-outline-success" href="sprint5-technical.html">Sprint 5 Technical</a>           
+        </div>  
+      </div>      
     </nav>
   </div>
   <!--
@@ -267,6 +273,7 @@
           <li><a href="https://github.com/sina-kakhki">GitHub</a></li>
           <li><a href="https://twitter.com/Sina180/with_replies">Twitter</a></li>
           <li><a href="https://www.facebook.com/sina.kakhki/">Facebook</a></li>
+          <li><a href="https://www.linkedin.com/in/sina-kakhki-4a3702102/">linkedIn</a></li>
         </ol>
       </div>
     </div>
