--- a/sprint1-cultural.html
+++ b/sprint1-cultural.html
@@ -58,10 +58,12 @@
               </ul>
           </article><!-- /.blog-post -->
 
-          <footer class="blog-footer">
-            <p>
-              <a href="#">Back to top</a>
-            </p>
+          <hr class="bottom-ruler"> 
+
+
+          <footer class="container">
+             <p class="float-end"><a href="#">Back to top</a></p>
+             <p>© 2021 Sina.K.</p>
           </footer>
     
         
