--- a/sprint2-cultural.html
+++ b/sprint2-cultural.html
@@ -45,11 +45,12 @@
 
         </article>
 
-        <footer class="blog-footer">
-            <p>
-              <a href="#">Back to top</a>
-            </p>
-        </footer>
+        <hr class="bottom-ruler"> 
+
+        <footer class="container">
+            <p class="float-end"><a href="#">Back to top</a></p>
+            <p>© 2021 Sina.K.</p>
+          </footer>
         
     </body>
 </html>
