--- a/sprint3-technical.html
+++ b/sprint3-technical.html
@@ -63,11 +63,13 @@
             <p><strong>Extensibility --</strong> When we need to extend our program to handle a case it didn’t handle before, functions allow us to make the change in one place and have that change take effect every time the function is called.</p>
         </article><!-- /.blog-post -->
 
-          <footer class="blog-footer">
-            <p>
-              <a href="#">Back to top</a>
-            </p>
-          </footer>
+        <hr class="bottom-ruler"> 
+
+
+        <footer class="container">
+           <p class="float-end"><a href="#">Back to top</a></p>
+           <p>© 2021 Sina.K.</p>
+        </footer>
     
         
     </body>
