--- a/sprint4-cultural.html
+++ b/sprint4-cultural.html
@@ -40,11 +40,13 @@
             <p>By understanding Neuroplasticity and Growth mindset, I've altered my learning plans a bit, leaving more space for sleep and rest and more emphasis on practice.</p>
         </article><!-- /.blog-post -->
 
-          <footer class="blog-footer">
-            <p>
-              <a href="#">Back to top</a>
-            </p>
-          </footer>
+        <hr class="bottom-ruler"> 
+
+
+        <footer class="container">
+           <p class="float-end"><a href="#">Back to top</a></p>
+           <p>© 2021 Sina.K.</p>
+        </footer>
     
         
     </body>
