final updates by the end of foundations

--- a/bootcamp-plan.html
+++ b/bootcamp-plan.html
@@ -10,10 +10,10 @@
     </head>
     <body>
         <div class="col-4">
-            <a href="sprint2-cultural.html"><button class="btn btn-outline-success" type="submit">Back to Foundations Plan</button></a>
+            <a href="index.html"><button class="btn btn-outline-success" type="submit">Back to blog</button></a>
         </div>
         <div class="col-4">
-            <a href="index.html"><button class="btn btn-outline-success" type="submit">My Bootcamp Learning Plan</button></a>
+            <a href="sprint2-cultural.html"><button class="btn btn-outline-success" type="submit">Back to Foundations Plan</button></a>
         </div>
 
         <article class="blog-post">
