--- a/sprint2-cultural.html
+++ b/sprint2-cultural.html
@@ -9,12 +9,14 @@
         <link href="styles/main.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <div class="col-4">
-            <a href="index.html"><button class="btn btn-outline-success" type="submit">Back to Blog</button></a>
-        </div>
-        <div class="col-4">
-            <a href="bootcamp-plan.html"><button class="btn btn-outline-success" type="submit">My Bootcamp Learning Plan</button></a>
-        </div>
+        <nav class="nav d-flex justify-content-between">
+            <div class="col-4">
+                <a href="index.html"><button class="btn btn-outline-success" type="submit">Back to Blog</button></a>
+            </div>
+            <div class="col-4">
+                <a href="bootcamp-plan.html"><button class="btn btn-outline-success" type="submit">My Bootcamp Learning Plan</button></a>
+            </div>
+        </nav>
 
         <article class="blog-post">
             <h2 class="blog-post-title">My Foundations Learning Plan</h2>
