added media queries

--- a/index.html
+++ b/index.html
@@ -22,11 +22,20 @@
         user-select: none;
       }
 
+      @media only screen and (max-width: 3600px), only screen and (max-device-width: 360px) {
+
+      }
+
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
           font-size: 3.5rem;
         }
       }
+
+      @media only screen and (max-width: 12000px), only screen and (max-device-width: 1200px) {
+
+      }
+
       /*styles for social media buttons*/
       .fa {
       padding: 20px;
