--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       padding: 20px;
       font-size: 30px;
       width: 65px;
+      height: 70px;
       text-align: center;
       text-decoration: none;
       margin: 5px 2px;
@@ -51,25 +52,9 @@
       opacity: 0.7;
       }
 
-      .fa-facebook {
-      background: #3B5998;
-      color: white;
-      }
-
-    .fa-twitter {
-      background: #55ACEE;
-      color: white;
-      }
-
       .fa-linkedin {
       background: #007bb5;
       color: white;
-      }
-
-      .fa-github {
-      background: #ffffff;
-      color: rgb(0, 0, 0);
-      margin-left: 60px;
       }
 
     </style>
@@ -89,7 +74,7 @@
        <!-- <a class="link-secondary" href="../index.html">Back to Home</a> -->
       </div>
       <div class="col-4 text-center">
-        <a class="blog-header-logo text-dark" href="#">Reflections & Ideas</a>
+        <a class="blog-header-logo text-dark" href="#">Hello, I'm Sina!</a>
       </div>
      <div class="col-4 d-flex justify-content-end align-items-center">
          <!-- <a class="link-secondary" href="#" aria-label="Search">
@@ -162,7 +147,7 @@
           <strong class="d-inline-block mb-2 text-primary">Calculator</strong>
           <h3 class="mb-0">The best calculator available on the market!</h3>
           <div class="mb-1 text-muted">March 10/2021</div>
-          <p class="card-text mb-auto">A very fast calculator!</p>
+          <p class="card-text mb-auto">A very fast calculator, built with JavaScript!</p>
           <a href="https://sina-kakhki.github.io/calculator/" class="stretched-link">View Project</a>
         </div>
         <div class="col-auto d-none d-lg-block">
@@ -271,7 +256,8 @@
     <div class="col-md-4">
       <div class="p-4 mb-3 bg-light rounded">
         <h4 class="font-italic">About Me</h4>
-        <p class="mb-0">My name is Sina Kakhki and I'm from Iran, <em>I'm a passionate learner</em> and I'm learning full-stack web development. I love chocolates and donuts especially chocolate donuts!</p>
+        <p class="mb-0">My name is Sina Kakhki and I'm from Iran. I recently made a career change from being a <em>sawmill worker</em> and building high quality pallets, bins and bee hives to a <em>full-stack software developer</em> in 4 months and write clean, maintainable and scalable code that solves real world problems.</p>
+        <p>View my resume <a href="https://drive.google.com/file/d/16sPB9gQ10h6oE-MJr7HRoLcZnBYofmMl/view?usp=sharing">here</a>.</p>
       </div>
     <!--
       <div class="p-4">
@@ -296,10 +282,8 @@
       <div class="p-4">
         <h4 class="font-italic">Elsewhere</h4>
          
-         <a href="https://www.linkedin.com/in/sina-kakhki-he-him-4a3702102/" class="fa fa-linkedin"></a>            
-         <a href="https://twitter.com/Sina180/with_replies" class="fa fa-twitter"></a>
-         <a href="https://www.facebook.com/sina.kakhki/" class="fa fa-facebook"></a><br>
-         <a href="https://github.com/sina-kakhki" class="fa fa-github" style="font-size: 70px;"></a>
+         <a href="https://www.linkedin.com/in/sina-kakhki-he-him-4a3702102/" class="fa fa-linkedin"></a>
+         <a href="https://github.com/sina-kakhki" class="fa"><img src="./images/gitHub.png" width='65px' height='70px' alt='gitHub'></a>
       </div>
     </div>
 
