new portfolio link added

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
        <!-- <a class="link-secondary" href="../index.html">Back to Home</a> -->
       </div>
       <div class="col-4 text-center">
-        <a class="blog-header-logo text-dark" href="#">Hello, I'm Sina!</a>
+        <p class="blog-header-logo text-dark">Hello, I'm Sina! This is my old blog to view my new portfolio blog please click <a class="blog-header-logo text-dark" href="https://sinakakhki.gatsbyjs.io/">HERE.</a></p>
       </div>
      <div class="col-4 d-flex justify-content-end align-items-center">
          <!-- <a class="link-secondary" href="#" aria-label="Search">
