update social link addresses

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
       <div class="p-4 mb-3 bg-light rounded">
         <h4 class="font-italic">About Me</h4>
         <p class="mb-0">My name is Sina Kakhki and I'm from Iran. I recently made a career change from being a <em>sawmill worker</em> and building high quality pallets, bins and bee hives to a <em>full-stack software developer</em> in 4 months and write clean, maintainable and scalable code that solves real world problems.</p>
-        <p>View my resume <a href="https://drive.google.com/file/d/16sPB9gQ10h6oE-MJr7HRoLcZnBYofmMl/view?usp=sharing">here</a>.</p>
+        <p>View my resume <a href="https://drive.google.com/file/d/1dGU9nqVnwwlj1apZXhEX6NzFoFM4Ua1C/view?usp=sharing">here</a>.</p>
       </div>
     <!--
       <div class="p-4">
@@ -282,7 +282,7 @@
       <div class="p-4">
         <h4 class="font-italic">Elsewhere</h4>
          
-         <a href="https://www.linkedin.com/in/sina-kakhki-he-him-4a3702102/" class="fa fa-linkedin"></a>
+         <a href="https://www.linkedin.com/in/sina-kakhki/" class="fa fa-linkedin"></a>
          <a href="https://github.com/sina-kakhki" class="fa"><img src="./images/gitHub.png" width='65px' height='70px' alt='gitHub'></a>
       </div>
     </div>
